header z-index fix

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -9,6 +9,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
+  z-index: 100;
 
   & h1 {
     color: white;
